--- a/templates/auth/cadastro.html
+++ b/templates/auth/cadastro.html
@@ -22,8 +22,8 @@
 
                             <div class="col-12 mb-3">
                                 {{ field(name='perfil', type='radio', radio_style='buttons', required=true,
-                                options={'Cliente': 'Cliente', 'Vendedor': 'Vendedor'},
-                                radio_icons={'Cliente': 'bi-cart3', 'Vendedor': 'bi-shop'}) }}
+                                options={'Autor': 'Autor', 'LEITOR': 'LEITOR'},
+                                radio_icons={'Autor': 'bi-cart3', 'LEITOR': 'bi-shop'}) }}
                             </div>
 
                             <div class="col-12 mb-3">
