--- a/templates/exemplos/detalhes_produto.html
+++ b/templates/exemplos/detalhes_produto.html
@@ -224,7 +224,7 @@
 
                 <!-- Avaliações -->
                 <div class="tab-pane fade" id="reviews" role="tabpanel">
-                    <h4 class="mb-4">Avaliações dos Clientes</h4>
+                    <h4 class="mb-4">Avaliações dos autors</h4>
 
                     <!-- Resumo de Avaliações -->
                     <div class="row mb-4">
