criação dos templates base e home page do blog

--- a/templates/base_publica.html
+++ b/templates/base_publica.html
@@ -42,6 +42,10 @@
                         <a class="nav-link {{ 'active' if request.path == '/' or request.path == '/index' else '' }}"
                             href="/">Início</a>
                     </li>
+                   <li class="nav-item">
+                        <a class="nav-link {{ 'active' if '/artigos' in request.path and '/meus' not in request.path else '' }}"
+                            href="/artigos"><i class="bi bi-newspaper"></i> Artigos</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link {{ 'active' if request.path == '/sobre' else '' }}"
                             href="/sobre">Sobre</a>
