configuração das rotas públicas e finalização do main.py

--- a/templates/base_publica.html
+++ b/templates/base_publica.html
@@ -50,9 +50,9 @@
                         <a class="nav-link {{ 'active' if request.path == '/sobre' else '' }}"
                             href="/sobre">Sobre</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if '/exemplos' in request.path else '' }}"
-                            href="/exemplos">Exemplos</a>
+                  <li class="nav-item">
+                        <a class="nav-link {{ 'active' if '/artigos' in request.path else '' }}"
+                            href="/artigos">Artigos</a>
                     </li>
                 </ul>
 
